--- a/starter-code/index.scss
+++ b/starter-code/index.scss
@@ -51,7 +51,8 @@ $clr-white: hsl(0, 0%, 100%);
 /*---------------------------DO RESETS FIRST--------------------------------------------------------*/
 /*--------------------------------------------------------------------------------------------------*/
 *,
-*::before * ::after {
+*::before,
+*::after {
 	box-sizing: border-box;
 	// makes calculating the widths and heights much  more easier
 }
@@ -89,10 +90,6 @@ body {
 
 html:focus-within {
 	scroll-behavior: smooth;
-}
-
-a:not([class]) {
-	text-decoration-skip-ink: auto;
 }
 
 img,
@@ -157,6 +154,10 @@ select {
 	white-space: nowrap;
 	border: 0;
 	clip: rect(0, 0, 0, 0);
+}
+
+.flow--space-small {
+	--flow-space: 0.75rem;
 }
 
 .flow > * + * {
@@ -251,7 +252,7 @@ select {
 
 .numberedtitles span {
 	font-weight: 700;
-	margin-right: 0.4em;
+	margin-right: 0.5em;
 	color: hslac($clr-white, 0.25);
 }
 /* -----------------------------------------------------------------------------------------------------*/
@@ -265,149 +266,159 @@ select {
 	position: relative;
 	display: inline-grid;
 	font-size: 2rem;
-	padding: 2em;
+	padding: 0 2em;
 	border-radius: 50%;
 	aspect-ratio: 1;
 	text-decoration: none;
 	place-items: center;
 	z-index: 1;
-
-	&:after {
-		content: "";
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		background: hslac($clr-white, 0.15);
-		border-radius: 50%;
-		z-index: -1;
-		opacity: 0;
-		transition: opacity 500ms linear, transform 750ms ease-in-out;
-	}
-
-	&focus::after,
-	&hover::after {
-		opacity: 1;
-		transform: scale(1.5);
-	}
 }
+
+.largebutton::after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: hslac($clr-white, 0.15);
+	border-radius: 50%;
+	z-index: -1;
+	opacity: 0;
+	transition: opacity 500ms linear, transform 750ms ease-in-out;
+}
+
+.largebutton:focus::after,
+.largebutton:hover::after {
+	opacity: 1;
+	transform: scale(1.5);
+}
+
 .logo {
 	margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
-}
-
-.primarynavigation {
-	--underline-gap: 2rem;
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	background: hslac($clr-white, 0.1);
-	backdrop-filter: blur(1rem);
-
-	a {
-		text-decoration: none;
-		text-align: center;
-	}
-
-	a > span {
-		margin-right: 0.6em;
-		font-weight: 700;
-	}
-
-	@media (max-width: 35em) {
-		--underline-gap: 0.5rem;
-		flex-direction: column;
-		position: fixed;
-		inset: 0 0 0 30%;
-		list-style: none;
-		z-index: 2;
-		padding: unquote("min(20rem, 10vh)") 2rem;
-		margin: 0;
-		transform: translateX(100%);
-		transition: transform 500ms ease-in-out;
-
-		> .active {
-			border: 0;
-		}
-
-		&[data-visible~="true"] {
-			transform: translateX(0);
-		}
-	}
-}
-
-.mobile-toggler {
-	display: none;
-
-	@media (max-width: 35em) {
-		display: block;
-		position: absolute;
-		right: 1rem;
-		top: 2rem;
-		z-index: 3;
-		background: transparent;
-		background-image: url(../starter-code/assets/shared/icon-hamburger.svg);
-		background-repeat: no-repeat;
-		background-position: center;
-		width: 2rem;
-		aspect-ratio: 1;
-		border: 0;
-
-		&[aria-expanded~="true"] {
-			background-image: url(../starter-code/assets/shared/icon-close.svg);
-			background-repeat: no-repeat;
-		}
-
-		&:focus-visible {
-			outline-offset: 5px;
-		}
-	}
 }
 
 .primary-header {
 	justify-content: space-between;
 	align-items: center;
-}
 
-@media (min-width: 45em) {
-	.primary-header::after {
-		content: "";
-		display: block;
-		position: relative;
-		height: 1px;
-		width: 100%;
-		margin-right: -2.5rem;
-		background: hslac($clr-white, 0.25);
-		order: 1;
+	@media (min-width: 35em) {
+		&::after {
+			content: "";
+			display: block;
+			position: relative;
+			height: 2px;
+			width: 100%;
+			margin-right: -2.5rem;
+			background: hslac($clr-white, 0.25);
+			order: 1;
+		}
+
+		nav {
+			order: 2;
+		}
 	}
 
-	nav {
-		order: 2;
+	.mobile-toggler {
+		display: none;
+
+		@media (max-width: 35em) {
+			display: block;
+			position: absolute;
+			right: 1rem;
+			top: 2rem;
+			z-index: 3;
+			background: transparent;
+			background-image: url(../starter-code/assets/shared/icon-hamburger.svg);
+			background-repeat: no-repeat;
+			background-position: center;
+			width: 2rem;
+			aspect-ratio: 1;
+			border: 0;
+
+			&[aria-expanded~="true"] {
+				background-image: url(../starter-code/assets/shared/icon-close.svg);
+				background-repeat: no-repeat;
+			}
+
+			&:focus-visible {
+				outline-offset: 5px;
+			}
+		}
 	}
 
 	.primarynavigation {
-		margin-block: 2rem;
-	}
-	.primarynavigation > *:first-child {
-		width: 120px;
-		display: flex;
-		justify-content: center;
+		--gap: clamp(1.5rem, 5vw, 3.5rem);
+		--underline-gap: 2rem;
+		list-style: none;
+		padding: 0;
+		margin: 0;
+		background: hslac($clr-white, 0.1);
+		backdrop-filter: blur(1rem);
+
+		a {
+			text-decoration: none;
+		}
+
+		a > span {
+			margin-right: 0.5em;
+			font-weight: 700;
+		}
+
+		@media (max-width: 35em) {
+			--underline-gap: 0.5rem;
+			flex-direction: column;
+			position: fixed;
+			inset: 0 0 0 30%;
+			list-style: none;
+			z-index: 2;
+			padding: unquote("min(20rem, 10vh)") 2rem;
+			margin: 0;
+			transform: translateX(100%);
+			transition: transform 500ms ease-in-out;
+
+			> .active {
+				border: 0;
+			}
+
+			&[data-visible~="true"] {
+				transform: translateX(0);
+			}
+		}
+
+		@media (min-width: 35em) {
+			padding-inline: clamp(3rem, 7vw, 7rem);
+		}
+
+		@media (min-width: 35em) and (max-width: 44.999em) {
+			a > span {
+				display: none;
+			}
+		}
+
+		@media (min-width: 45em) {
+			margin-block: 3rem;
+		}
 	}
 }
 
-.underline-indicators > * {
-	cursor: pointer;
-	border: 0;
-	border-bottom: 0.2rem solid hslac($clr-white, 0);
-	padding: var(--underline-gap, 1.5rem) 0;
-}
-.underline-indicators > *:hover,
-.underline-indicators > *:focus {
-	border-color: hslac($clr-white, 0.5);
-}
+.underline-indicators {
+	> * {
+		cursor: pointer;
+		padding: var(--underline-gap, 1.5rem) 0;
+		border: 0;
+		border-bottom: 0.2rem solid hslac($clr-white, 0);
+		background: transparent;
+	}
 
-.underline-indicators > .active,
-.underline-indicators > [aria-selected="true"] {
-	color: hslac($clr-white, 1);
-	border-color: hslac($clr-white, 1);
+	*:hover,
+	*:focus {
+		border-color: hslac($clr-white, 0.5);
+	}
+
+	> .active,
+	&[aria-selected~="true"] {
+		color: hslac($clr-white, 1);
+		border-color: hslac($clr-white, 1);
+	}
 }
 
 .tab-list {
@@ -429,6 +440,71 @@ select {
 
 .dot-indicators > [aria-selected="true"] {
 	background-color: hslac($clr-white, 1);
+}
+
+.grid-container {
+	display: grid;
+	text-align: -webkit-center;
+	place-items: center;
+	padding-inline: 1rem;
+	padding-bottom: 4rem;
+
+	* {
+		max-width: 50ch;
+	}
+
+	// .destination-meta {
+	// 	flex-direction: column;
+	// 	border-top: 2px solid hslac($clr-white, 0.1);
+	// 	padding-top: 2.5rem;
+	// 	margin-top: 2.5rem;
+	// }
+
+	@media (min-width: 45em) {
+		text-align: left;
+		display: grid;
+		column-gap: var(--column-gap, 2rem);
+		grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(
+				2rem,
+				1fr
+			);
+
+		> *:first-child {
+			grid-column: 2;
+		}
+		> *:last-child {
+			grid-column: 3;
+		}
+
+		.grid-container--home {
+			padding-bottom: unquote("max(6rem, 20vh)");
+			align-items: end;
+		}
+
+		// .numberedtitles {
+		// 	grid-area: title;
+		// }
+
+		// .grid-container--destination {
+		// 	img {
+		// 		grid-area: image;
+		// 		max-width: 60%;
+		// 	}
+
+		// 	.destination-info {
+		// 		grid-area: content;
+		// 	}
+		// 	.tab-list {
+		// 		grid-area: tabs;
+		// 	}
+		// 	grid-template-areas:
+		// 		"title"
+		// 		"image"
+		// 		"tabs"
+		// 		"content";
+		// }
+		// }
+	}
 }
 
 /*----------------------------------------------------------------*/
@@ -496,67 +572,3 @@ body {
 /*------------------------------------------------------------------------------------------------------------------------------*/
 /*--------------------------------------------------------------------------------------LAYOUT------------------------------------*/
 /*--destination layout*/
-.grid-container {
-	text-align: center;
-	justify-items: center;
-	align-items: center;
-	padding-inline: 1rem;
-	padding-bottom: 4rem;
-
-	* {
-		max-width: 50ch;
-	}
-
-	// .destination-meta {
-	// 	flex-direction: column;
-	// 	border-top: 2px solid hslac($clr-white, 0.1);
-	// 	padding-top: 2.5rem;
-	// 	margin-top: 2.5rem;
-	// }
-
-	@media (min-width: 45em) {
-		text-align: left;
-		display: grid;
-		column-gap: var(--column-gap, 2rem);
-		grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(
-				2rem,
-				1fr
-			);
-
-		> :first-child {
-			grid-column: 2;
-		}
-		> :last-child {
-			grid-column: 3;
-		}
-
-		.grid-container--home {
-			padding-bottom: unquote("max(6rem, 20vh)");
-			align-items: end;
-		}
-
-		// .numberedtitles {
-		// 	grid-area: title;
-		// }
-
-		// .grid-container--destination {
-		// 	img {
-		// 		grid-area: image;
-		// 		max-width: 60%;
-		// 	}
-
-		// 	.destination-info {
-		// 		grid-area: content;
-		// 	}
-		// 	.tab-list {
-		// 		grid-area: tabs;
-		// 	}
-		// 	grid-template-areas:
-		// 		"title"
-		// 		"image"
-		// 		"tabs"
-		// 		"content";
-		// }
-		// }
-	}
-}
