--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,8 @@
 /*---------------------------DO RESETS FIRST--------------------------------------------------------*/
 /*--------------------------------------------------------------------------------------------------*/
 *,
-*::before * ::after {
+*::before,
+*::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -50,10 +51,6 @@ body {
 
 html:focus-within {
   scroll-behavior: smooth;
-}
-
-a:not([class]) {
-  text-decoration-skip-ink: auto;
 }
 
 img,
@@ -122,6 +119,10 @@ select {
   white-space: nowrap;
   border: 0;
   clip: rect(0, 0, 0, 0);
+}
+
+.flow--space-small {
+  --flow-space: 0.75rem;
 }
 
 .flow > * + * {
@@ -230,7 +231,7 @@ select {
 
 .numberedtitles span {
   font-weight: 700;
-  margin-right: 0.4em;
+  margin-right: 0.5em;
   color: rgba(255, 255, 255, 0.25);
 }
 
@@ -245,7 +246,7 @@ select {
   display: -ms-inline-grid;
   display: inline-grid;
   font-size: 2rem;
-  padding: 2em;
+  padding: 0 2em;
   border-radius: 50%;
   aspect-ratio: 1;
   text-decoration: none;
@@ -253,7 +254,7 @@ select {
   z-index: 1;
 }
 
-.largebutton:after {
+.largebutton::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -268,7 +269,8 @@ select {
   transition: opacity 500ms linear, transform 750ms ease-in-out, -webkit-transform 750ms ease-in-out;
 }
 
-.largebuttonfocus::after, .largebuttonhover::after {
+.largebutton:focus::after,
+.largebutton:hover::after {
   opacity: 1;
   -webkit-transform: scale(1.5);
           transform: scale(1.5);
@@ -278,7 +280,65 @@ select {
   margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
 }
 
-.primarynavigation {
+.primary-header {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (min-width: 35em) {
+  .primary-header::after {
+    content: "";
+    display: block;
+    position: relative;
+    height: 2px;
+    width: 100%;
+    margin-right: -2.5rem;
+    background: rgba(255, 255, 255, 0.25);
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .primary-header nav {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+
+.primary-header .mobile-toggler {
+  display: none;
+}
+
+@media (max-width: 35em) {
+  .primary-header .mobile-toggler {
+    display: block;
+    position: absolute;
+    right: 1rem;
+    top: 2rem;
+    z-index: 3;
+    background: transparent;
+    background-image: url(../starter-code/assets/shared/icon-hamburger.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 2rem;
+    aspect-ratio: 1;
+    border: 0;
+  }
+  .primary-header .mobile-toggler[aria-expanded~="true"] {
+    background-image: url(../starter-code/assets/shared/icon-close.svg);
+    background-repeat: no-repeat;
+  }
+  .primary-header .mobile-toggler:focus-visible {
+    outline-offset: 5px;
+  }
+}
+
+.primary-header .primarynavigation {
+  --gap: clamp(1.5rem, 5vw, 3.5rem);
   --underline-gap: 2rem;
   list-style: none;
   padding: 0;
@@ -288,18 +348,17 @@ select {
           backdrop-filter: blur(1rem);
 }
 
-.primarynavigation a {
+.primary-header .primarynavigation a {
   text-decoration: none;
-  text-align: center;
 }
 
-.primarynavigation a > span {
-  margin-right: 0.6em;
+.primary-header .primarynavigation a > span {
+  margin-right: 0.5em;
   font-weight: 700;
 }
 
 @media (max-width: 35em) {
-  .primarynavigation {
+  .primary-header .primarynavigation {
     --underline-gap: 0.5rem;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -318,98 +377,47 @@ select {
     transition: transform 500ms ease-in-out;
     transition: transform 500ms ease-in-out, -webkit-transform 500ms ease-in-out;
   }
-  .primarynavigation > .active {
+  .primary-header .primarynavigation > .active {
     border: 0;
   }
-  .primarynavigation[data-visible~="true"] {
+  .primary-header .primarynavigation[data-visible~="true"] {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
 }
 
-.mobile-toggler {
-  display: none;
-}
-
-@media (max-width: 35em) {
-  .mobile-toggler {
-    display: block;
-    position: absolute;
-    right: 1rem;
-    top: 2rem;
-    z-index: 3;
-    background: transparent;
-    background-image: url(../starter-code/assets/shared/icon-hamburger.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 2rem;
-    aspect-ratio: 1;
-    border: 0;
-  }
-  .mobile-toggler[aria-expanded~="true"] {
-    background-image: url(../starter-code/assets/shared/icon-close.svg);
-    background-repeat: no-repeat;
-  }
-  .mobile-toggler:focus-visible {
-    outline-offset: 5px;
+@media (min-width: 35em) {
+  .primary-header .primarynavigation {
+    padding-inline: clamp(3rem, 7vw, 7rem);
   }
 }
 
-.primary-header {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media (min-width: 35em) and (max-width: 44.999em) {
+  .primary-header .primarynavigation a > span {
+    display: none;
+  }
 }
 
 @media (min-width: 45em) {
-  .primary-header::after {
-    content: "";
-    display: block;
-    position: relative;
-    height: 1px;
-    width: 100%;
-    margin-right: -2.5rem;
-    background: rgba(255, 255, 255, 0.25);
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
-  }
-  nav {
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
-  }
-  .primarynavigation {
-    margin-block: 2rem;
-  }
-  .primarynavigation > *:first-child {
-    width: 120px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  .primary-header .primarynavigation {
+    margin-block: 3rem;
   }
 }
 
 .underline-indicators > * {
   cursor: pointer;
+  padding: var(--underline-gap, 1.5rem) 0;
   border: 0;
   border-bottom: 0.2rem solid rgba(255, 255, 255, 0);
-  padding: var(--underline-gap, 1.5rem) 0;
+  background: transparent;
 }
 
-.underline-indicators > *:hover,
-.underline-indicators > *:focus {
+.underline-indicators *:hover,
+.underline-indicators *:focus {
   border-color: rgba(255, 255, 255, 0.5);
 }
 
-.underline-indicators > .active,
-.underline-indicators > [aria-selected="true"] {
+.underline-indicators > .active, .underline-indicators[aria-selected~="true"] {
   color: white;
   border-color: white;
 }
@@ -433,6 +441,45 @@ select {
 
 .dot-indicators > [aria-selected="true"] {
   background-color: white;
+}
+
+.grid-container {
+  display: -ms-grid;
+  display: grid;
+  text-align: -webkit-center;
+  place-items: center;
+  padding-inline: 1rem;
+  padding-bottom: 4rem;
+}
+
+.grid-container * {
+  max-width: 50ch;
+}
+
+@media (min-width: 45em) {
+  .grid-container {
+    text-align: left;
+    display: -ms-grid;
+    display: grid;
+    -webkit-column-gap: var(--column-gap, 2rem);
+            column-gap: var(--column-gap, 2rem);
+    -ms-grid-columns: minmax(2rem, 1fr) (minmax(0, 40rem))[2] minmax(2rem, 1fr);
+        grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(2rem, 1fr);
+  }
+  .grid-container > *:first-child {
+    -ms-grid-column: 2;
+    grid-column: 2;
+  }
+  .grid-container > *:last-child {
+    -ms-grid-column: 3;
+    grid-column: 3;
+  }
+  .grid-container .grid-container--home {
+    padding-bottom: max(6rem, 20vh);
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: end;
+  }
 }
 
 /*----------------------------------------------------------------*/
@@ -517,43 +564,4 @@ body {
 /*------------------------------------------------------------------------------------------------------------------------------*/
 /*--------------------------------------------------------------------------------------LAYOUT------------------------------------*/
 /*--destination layout*/
-.grid-container {
-  text-align: center;
-  justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-inline: 1rem;
-  padding-bottom: 4rem;
-}
-
-.grid-container * {
-  max-width: 50ch;
-}
-
-@media (min-width: 45em) {
-  .grid-container {
-    text-align: left;
-    display: -ms-grid;
-    display: grid;
-    -webkit-column-gap: var(--column-gap, 2rem);
-            column-gap: var(--column-gap, 2rem);
-    -ms-grid-columns: minmax(2rem, 1fr) (minmax(0, 40rem))[2] minmax(2rem, 1fr);
-        grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(2rem, 1fr);
-  }
-  .grid-container > :first-child {
-    -ms-grid-column: 2;
-    grid-column: 2;
-  }
-  .grid-container > :last-child {
-    -ms-grid-column: 3;
-    grid-column: 3;
-  }
-  .grid-container .grid-container--home {
-    padding-bottom: max(6rem, 20vh);
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: end;
-  }
-}
 /*# sourceMappingURL=index.css.map */
