--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -321,7 +321,7 @@ select {
     top: 2rem;
     z-index: 3;
     background: transparent;
-    background-image: url(../starter-code/assets/shared/icon-hamburger.svg);
+    background-image: url(./assets/shared/icon-hamburger.svg);
     background-repeat: no-repeat;
     background-position: center;
     width: 2rem;
@@ -329,7 +329,7 @@ select {
     border: 0;
   }
   .primary-header .mobile-toggler[aria-expanded~="true"] {
-    background-image: url(../starter-code/assets/shared/icon-close.svg);
+    background-image: url(./assets/shared/icon-close.svg);
     background-repeat: no-repeat;
   }
   .primary-header .mobile-toggler:focus-visible {
@@ -415,8 +415,8 @@ select {
   background: transparent;
 }
 
-.underline-indicators *:hover,
-.underline-indicators *:focus {
+.underline-indicators :hover,
+.underline-indicators :focus {
   border-color: rgba(255, 255, 255, 0.5);
 }
 
@@ -791,73 +791,73 @@ body {
 }
 
 .home {
-  background-image: url("../starter-code/assets/home/background-home-mobile.jpg");
+  background-image: url(".assets/home/background-home-mobile.jpg");
 }
 
 @media (min-width: 35em) {
   .home {
     background-position: center center;
-    background-image: url("../starter-code/assets/home/background-home-tablet.jpg");
+    background-image: url(".assets/home/background-home-tablet.jpg");
   }
 }
 
 @media (min-width: 45em) {
   .home {
-    background-image: url("../starter-code/assets/home/background-home-desktop.jpg");
+    background-image: url(".assets/home/background-home-desktop.jpg");
   }
 }
 
 /* destination */
 .destination {
-  background-image: url("../starter-code/assets/destination/background-destination-mobile.jpg");
+  background-image: url("./assets/destination/background-destination-mobile.jpg");
 }
 
 @media (min-width: 35em) {
   .destination {
     background-position: center center;
-    background-image: url("../starter-code/assets/destination/background-destination-tablet.jpg");
+    background-image: url("./assets/destination/background-destination-tablet.jpg");
   }
 }
 
 @media (min-width: 45em) {
   .destination {
-    background-image: url("../starter-code/assets/destination/background-destination-desktop.jpg");
+    background-image: url("./assets/destination/background-destination-desktop.jpg");
   }
 }
 
 /* crew */
 .crew {
-  background-image: url("../starter-code/assets/crew/background-crew-mobile.jpg");
+  background-image: url("./assets/crew/background-crew-mobile.jpg");
 }
 
 @media (min-width: 35em) {
   .crew {
     background-position: center center;
-    background-image: url("../starter-code/assets/crew/background-crew-tablet.jpg");
+    background-image: url("./assets/crew/background-crew-tablet.jpg");
   }
 }
 
 @media (min-width: 45em) {
   .crew {
-    background-image: url("../starter-code/assets/crew/background-crew-desktop.jpg");
+    background-image: url("./assets/crew/background-crew-desktop.jpg");
   }
 }
 
 /*technology*/
 .technology {
-  background-image: url("../starter-code/assets/technology/background-technology-mobile.jpg");
+  background-image: url("./assets/technology/background-technology-mobile.jpg");
 }
 
 @media (min-width: 35em) {
   .technology {
     background-position: center center;
-    background-image: url("../starter-code/assets/technology/background-technology-tablet.jpg");
+    background-image: url("./assets/technology/background-technology-tablet.jpg");
   }
 }
 
 @media (min-width: 45em) {
   .technology {
-    background-image: url("../starter-code/assets/technology/background-technology-desktop.jpg");
+    background-image: url("./assets/technology/background-technology-desktop.jpg");
   }
 }
 /*# sourceMappingURL=index.css.map */
