--- a/starter-code/index.scss
+++ b/starter-code/index.scss
@@ -327,7 +327,7 @@ select {
 			top: 2rem;
 			z-index: 3;
 			background: transparent;
-			background-image: url(../starter-code/assets/shared/icon-hamburger.svg);
+			background-image: url(./assets/shared/icon-hamburger.svg);
 			background-repeat: no-repeat;
 			background-position: center;
 			width: 2rem;
@@ -335,7 +335,7 @@ select {
 			border: 0;
 
 			&[aria-expanded~="true"] {
-				background-image: url(../starter-code/assets/shared/icon-close.svg);
+				background-image: url(./assets/shared/icon-close.svg);
 				background-repeat: no-repeat;
 			}
 
@@ -412,18 +412,19 @@ select {
 		background: transparent;
 	}
 
-	*:hover,
-	*:focus {
+	:hover,
+	:focus {
 		border-color: hslac($clr-white, 0.5);
 	}
-
 	> .active,
 	&[aria-selected~="true"] {
 		color: hslac($clr-white, 1);
 		border-color: hslac($clr-white, 1);
 	}
 }
-
+// [role="tab"]:focus {
+// 	color: green;
+// }
 .tab-list {
 	--gap: 2rem;
 }
@@ -721,56 +722,56 @@ body {
 	background-position: bottom center;
 }
 .home {
-	background-image: url("../starter-code/assets/home/background-home-mobile.jpg");
+	background-image: url(".assets/home/background-home-mobile.jpg");
 
 	@media (min-width: 35em) {
 		background-position: center center;
-		background-image: url("../starter-code/assets/home/background-home-tablet.jpg");
+		background-image: url(".assets/home/background-home-tablet.jpg");
 	}
 
 	@media (min-width: 45em) {
-		background-image: url("../starter-code/assets/home/background-home-desktop.jpg");
+		background-image: url(".assets/home/background-home-desktop.jpg");
 	}
 }
 
 /* destination */
 .destination {
-	background-image: url("../starter-code/assets/destination/background-destination-mobile.jpg");
+	background-image: url("./assets/destination/background-destination-mobile.jpg");
 
 	@media (min-width: 35em) {
 		background-position: center center;
-		background-image: url("../starter-code/assets/destination/background-destination-tablet.jpg");
+		background-image: url("./assets/destination/background-destination-tablet.jpg");
 	}
 
 	@media (min-width: 45em) {
-		background-image: url("../starter-code/assets/destination/background-destination-desktop.jpg");
+		background-image: url("./assets/destination/background-destination-desktop.jpg");
 	}
 }
 
 /* crew */
 .crew {
-	background-image: url("../starter-code/assets/crew/background-crew-mobile.jpg");
+	background-image: url("./assets/crew/background-crew-mobile.jpg");
 
 	@media (min-width: 35em) {
 		background-position: center center;
-		background-image: url("../starter-code/assets/crew/background-crew-tablet.jpg");
+		background-image: url("./assets/crew/background-crew-tablet.jpg");
 	}
 
 	@media (min-width: 45em) {
-		background-image: url("../starter-code/assets/crew/background-crew-desktop.jpg");
+		background-image: url("./assets/crew/background-crew-desktop.jpg");
 	}
 }
 
 /*technology*/
 .technology {
-	background-image: url("../starter-code/assets/technology/background-technology-mobile.jpg");
+	background-image: url("./assets/technology/background-technology-mobile.jpg");
 
 	@media (min-width: 35em) {
 		background-position: center center;
-		background-image: url("../starter-code/assets/technology/background-technology-tablet.jpg");
+		background-image: url("./assets/technology/background-technology-tablet.jpg");
 	}
 
 	@media (min-width: 45em) {
-		background-image: url("../starter-code/assets/technology/background-technology-desktop.jpg");
+		background-image: url("./assets/technology/background-technology-desktop.jpg");
 	}
 }
