--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -420,7 +420,8 @@ select {
   border-color: rgba(255, 255, 255, 0.5);
 }
 
-.underline-indicators > .active, .underline-indicators[aria-selected~="true"] {
+.underline-indicators > .active,
+.underline-indicators [aria-selected="true"] {
   color: white;
   border-color: white;
 }
@@ -791,19 +792,19 @@ body {
 }
 
 .home {
-  background-image: url(".assets/home/background-home-mobile.jpg");
+  background-image: url("./assets/home/background-home-mobile.jpg");
 }
 
 @media (min-width: 35em) {
   .home {
     background-position: center center;
-    background-image: url(".assets/home/background-home-tablet.jpg");
+    background-image: url("./assets/home/background-home-tablet.jpg");
   }
 }
 
 @media (min-width: 45em) {
   .home {
-    background-image: url(".assets/home/background-home-desktop.jpg");
+    background-image: url("./assets/home/background-home-desktop.jpg");
   }
 }
 
