--- a/starter-code/index.scss
+++ b/starter-code/index.scss
@@ -417,14 +417,12 @@ select {
 		border-color: hslac($clr-white, 0.5);
 	}
 	> .active,
-	&[aria-selected~="true"] {
+	[aria-selected="true"] {
 		color: hslac($clr-white, 1);
 		border-color: hslac($clr-white, 1);
 	}
 }
-// [role="tab"]:focus {
-// 	color: green;
-// }
+
 .tab-list {
 	--gap: 2rem;
 }
@@ -722,15 +720,15 @@ body {
 	background-position: bottom center;
 }
 .home {
-	background-image: url(".assets/home/background-home-mobile.jpg");
+	background-image: url("./assets/home/background-home-mobile.jpg");
 
 	@media (min-width: 35em) {
 		background-position: center center;
-		background-image: url(".assets/home/background-home-tablet.jpg");
+		background-image: url("./assets/home/background-home-tablet.jpg");
 	}
 
 	@media (min-width: 45em) {
-		background-image: url(".assets/home/background-home-desktop.jpg");
+		background-image: url("./assets/home/background-home-desktop.jpg");
 	}
 }
 
